--- a/src/main/resources/assets/smd/lang/en_US.lang
+++ b/src/main/resources/assets/smd/lang/en_US.lang
@@ -2,3 +2,5 @@ item.obsidianIngot.name=Obsidian Ingot
 item.ruby.name=Ruby
 
 tile.blockRuby.name=Block of Ruby
+
+itemGroup.tab_debagger=Debagger Mod
