Introduce Debagger Closet

--- a/src/main/resources/assets/smd/lang/en_US.lang
+++ b/src/main/resources/assets/smd/lang/en_US.lang
@@ -2,5 +2,6 @@ item.obsidianIngot.name=Obsidian Ingot
 item.ruby.name=Ruby
 
 tile.blockRuby.name=Block of Ruby
+tile.blockDebaggerCloset.name=Debagger Closet
 
 itemGroup.tab_debagger=Debagger Mod
